all issues are fixed